--- a/cit230/lesson-5/styles/medium-5.css
+++ b/cit230/lesson-5/styles/medium-5.css
@@ -1,12 +1,14 @@
-@media only screen and (min-width: 37.5em) {
+@media only screen and (min-width: 600px) {
 
     /* Only CSS write declarations that need to be changed. Do not duplicated declarations that are already established in the main.css */
     
     nav button { display:none; }  /* hamburger button does not need to be shown in the medium on up views */
     
-    section.forecast { display: show; }  /* show the 10-day forecast with the medium view and up */
+	section.forecast { display: block;}  /* show the 10-day forecast with the medium view and up */
 
-	
+	nav ul {
+		display: block;
+	}
 	nav ul li {
 		float: left;
 		border-right: 1px solid #a6a1a1
@@ -17,5 +19,28 @@
 	}
 	nav ul li a.active {
 		background-color: #8d0111 
+	}
+	header h1 {
+		font-weight: 1000;
+		margin-bottom: 17px;
+	}
+	figure {
+		margin: 0
+	}
+	section.forecast h3 {
+		border-bottom: 1px solid #8d0111;
+		text-align: center;
+		background: #a6a1a1;
+		margin: 0;
+	}
+	section.forecast {
+		border: 1px solid #8d0111;
+		background: #a6a1a1;
+	}
+	table {
+		text-align: center;
+	}
+	main h2 {
+		margin-bottom: -10px;
 	}
   }
