--- a/cit230/lesson-7/styles/medium-5.css
+++ b/cit230/lesson-7/styles/medium-5.css
@@ -59,7 +59,7 @@
 		display:grid;
 		grid-template-columns: 1fr 1fr;
 		column-gap: 10px;
-		row-gap: 1em;
+		grid-row-gap: 1em;
   	}
   	
 	main.wrapper img:hover{
