--- a/cit230/lesson-9/styles/main-5.css
+++ b/cit230/lesson-9/styles/main-5.css
@@ -28,9 +28,10 @@ header h1 {
     padding-right: 3em;
     box-sizing: border-box;
 }
-header img {
+header div.logo img {
 	width: 6em;
-    height: auto;
+	height: auto;
+	align-self: flex-start;
 }
 header .subheading {
 	 color: #ffffff;
@@ -139,6 +140,30 @@ main.wrapper {
 }
 main.wrapper img {
 	max-width: 100%
+}
+div {
+	display: flex;
+	flex-direction: column;
+}
+div p{
+	text-align: center;
+	
+}
+div {
+	border: 2px solid #3e2c5c;
+}
+div img {
+	max-width: 100%;
+	height: 150px;
+}
+section > div{
+	border:none;
+}
+figure > div{
+	border:none;
+}
+div > div{
+	border:none;
 }
 /* ---------- FORM ----------------*/
 form fieldset{
