--- a/cit230/lesson-9/styles/medium-5.css
+++ b/cit230/lesson-9/styles/medium-5.css
@@ -64,6 +64,13 @@
   	
 	main.wrapper img:hover{
 		box-shadow: 5px 5px 10px gray;
-	}  
+	} 
+	
+	div img {
+		width: 400px;
+		height: 200px;
+		align-self: center;
+	}
+
   }
 
