--- a/cit230/weathersite/includes/footer.html
+++ b/cit230/weathersite/includes/footer.html
@@ -5,6 +5,6 @@
     123 Main St. Anytown, US 99999 <br>
     Google Map
   </section>
-  <section class="footer-bar">&copy;2018 | All Rights Reserved | Site Title | <span id="currentdate"></span>
+  <section class="footer-bar">&copy;2018 | All Rights Reserved | Red Sky Radar | <span id="currentdate"></span>
     <h6>I'm required</h6>
    </section>
