--- a/cit230/final/css/main.css
+++ b/cit230/final/css/main.css
@@ -24,7 +24,7 @@ header > div {
     width: -webkit-fill-available;
 }
 
-header img{
+header div img{
     width: 20em;
     height: 20em;
     align-self: flex-start;
