--- a/cit230/final/css/medium.css
+++ b/cit230/final/css/medium.css
@@ -1,4 +1,35 @@
 @media only screen and (min-width: 600px) {
 
+    nav button {
+         display:none; 
+    }
+
+    nav ul {
+		display: block;
+    }
+    
+	nav ul.hide{
+		display: block;
+    }
+    
+	nav ul li {
+		float: left;
+		border-right: 1px solid #a6a1a1
+    }
+    
+	nav ul li a {
+		display: block;
+		padding:8px;
+    }
+    
+	nav ul li a.active {
+		background-color: #D30F02;
+    }
+    
+	header h1 {
+		font-weight: 1000;
+		margin-bottom: 17px;
+	}
+
 
 }
