--- a/cit230/final/css/main.css
+++ b/cit230/final/css/main.css
@@ -11,6 +11,11 @@ main {
     font-size: 16px;
 }
 
+body {
+    width:100%;
+    
+}
+
 /*--------Header-------*/
 header { 
     background-color: #809507;
