--- a/cit230/final/includes/header.html
+++ b/cit230/final/includes/header.html
@@ -1,7 +1,7 @@
 <div>
     <img src="img/mountain-spoke-logo.png" alt="Logo for the Mountain Spoke">
     <h1>Mountain Spoke <br>
-    See the Sights on a Bike</h1>
+    When in Doubt, Pedal it Out</h1>
     <img id="heading" src="img/mountain-bike-trail-vector.jpg" alt="Bike Trail Decoration" sizes="50vw"
     srcset="img/mountain-bike-trail-vector.jpg 800w,
     img/bike-trail-down-the-mountain.jpg 1500w">
