--- a/cit230/final/css/medium.css
+++ b/cit230/final/css/medium.css
@@ -31,7 +31,7 @@
 	header h1 {
 		font-weight: 1000;
 		margin-bottom: 17px;
-		font-size: 3em;
+		font-size: 2.3em;
 	}
 	
 	header div img {
@@ -41,11 +41,23 @@
 
 	img#heading {
 		display: block;
-		width: 185px;
+		width: 215px;
+	}
+
+	header > div {
+		justify-content: space-between;
 	}
 
 	/*------Main-----*/
 	main img{
 		height: 20em;
+	}
+
+	main div img {
+		order: 1;
+	}
+
+	main div{
+		align-items: center;
 	}
 }
