--- a/cit230/final/css/large.css
+++ b/cit230/final/css/large.css
@@ -1,3 +1,35 @@
 @media only screen and (min-width: 1024px ) {
 
+    /*------Heading------*/
+    img#heading {
+        width: 412px;
+    }
+
+    header h1 {
+        font-size: 3.3em;
+    }
+    
+    /*-----Main-----*/
+    p {
+        font-size: 25px;
+    }
+
+    main div img {
+        width: auto;
+    }
+
+    main {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
+
+    main div {
+        border: none;
+    }
+
+    /*-----Footer-----*/
+	section.footerbar {
+		font-size: 30px;
+	}
 }
