--- a/cit230/final/css/main.css
+++ b/cit230/final/css/main.css
@@ -115,3 +115,76 @@ footer a{
     color: #F7C20E;
     text-decoration: none;
 }
+
+/* ---------- FORM ----------------*/
+form fieldset{
+    margin: 2rem 0;
+    border: 1px solid #3e2c5c;
+    border-radius: 10px;
+    padding: .5rem 2%;
+}
+form legend{
+    color: #3e2c5c;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+}
+form label.top, form div{
+    display: block;
+    padding-top: 1rem;
+    color: #8d0111;
+    font-size: .8rem;
+}
+form label.top input, form label.top select{
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0,0,0,0.1);
+}
+form label.sbs{
+    display: block;
+    padding: .75rem 0;
+    color: #555;
+}
+form input.submitBtn{
+    border: none;
+    background-color: #8d0111;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
+}
+form label.top input:required {
+    border-left: red solid 6px;
+}
+form label.top input:required:valid {
+	border-left: green solid 6px;
+}
+form textarea {
+	background-color: rgba(0,0,0,0.1);
+}
+
+/*----Accordian------*/
+.head, li, h2 { 
+    margin-bottom:15px; 
+}
+    
+.head { 
+    display:block; 
+}
+    
+.content { 
+    display:none; 
+}
+
+li {
+    position: relative;
+    overflow: hidden;
+}
