--- a/cit230/final/css/main.css
+++ b/cit230/final/css/main.css
@@ -87,6 +87,14 @@ nav ul li a:hover {
 }
 
 /*--------Main---------*/
+main img {
+    width: 100%
+}
+
+main p {
+    text-align: center;
+}
+
 main div img {
     width: 100%;
 }
