--- a/cit230/final/css/main.css
+++ b/cit230/final/css/main.css
@@ -109,6 +109,11 @@ div a {
     text-decoration: none;
 }
 
+p a {
+    color: #F7C20E;
+    text-decoration: none;
+}
+
 div#google {
     width: 100%;
 }
