--- a/cit230/final/css/main.css
+++ b/cit230/final/css/main.css
@@ -109,6 +109,10 @@ main article {
     border: solid #F7C20E 1px;
 }
 
+main ul {
+    padding: 0;
+}
+
 div a {
     color: #F7C20E;
     text-decoration: none;
