--- a/cit230/final/css/large.css
+++ b/cit230/final/css/large.css
@@ -44,6 +44,10 @@
         width: 45em;
     }
 
+    .content {
+        margin: auto;
+    }
+
     /*-----Footer-----*/
 	section.footerbar {
 		font-size: 30px;
