--- a/cit230/final/css/medium.css
+++ b/cit230/final/css/medium.css
@@ -30,7 +30,7 @@
 	
 	/*------Header------*/
 	header h1 {
-		font-weight: 1000;
+		font-weight: 1000px;
 		margin-bottom: 17px;
 		font-size: 2.3em;
 	}
@@ -80,7 +80,7 @@
 		justify-content: space-evenly;
 		flex-flow: row wrap;
 	}
-	
+
 	form input.submitBtn {
 		height: 50%;
 	}
