--- a/cit230/final/includes/footer.html
+++ b/cit230/final/includes/footer.html
@@ -1,3 +1,3 @@
 <section class="footerbar">
-        &copy; 2018 | All Rights Reserved | Mountain Spoke | <a href="resources.html">Resources</a> | <a href"#">Behind the Scenes</a>
+        &copy; 2018 | All Rights Reserved | Mountain Spoke | <a href="resources.html">Resources</a> | <a href"video.html">Video</a>
 </section>
